cluster/homelab/apps/changedetection/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: changedetection
    namespace: changedetection
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Monitors changes to websites
        gethomepage.dev/group: Automation
        gethomepage.dev/icon: changedetection-io
        gethomepage.dev/name: ChangeDetection.io
